Update page title to 'Contact Us | Modern WebApp Builder'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us | Modern WebApp</title>
+  <title>Contact Us | Modern WebApp Builder</title>
   <style>
     body {
       background: linear-gradient(135deg, #e3f2fd, #bbdefb);
